Bug 845985 - feComponentTransfer with type=discrete should work with a single tableValue. r=roc